# infra-ai-streaming

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CHAOS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  LOCAL-TEST-DAY6.md  OBSERVABILITY.md  README.md  RELEASE.md  SECURITY.md  infra-ai-streaming-7day-plan.md
.agent/: cover-style-guide.md  diagram-style-guide.md  email-template.md  gmail_send.sh  pr-description-template.md  pre-push-check.sh
.github/: CODEOWNERS  dependabot.yml
chaos/: run_chaos.sh  run_chaos_k8s.sh
consumer/: README.md  go.mod  go.sum
deploy/: .env.example  README.md  docker-compose.yml
distributed-flagd/: BENCHMARKS.md  DESIGN.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
docs/: 7-day-plan.md  ARCHITECTURE-AND-FLOWS.md  ARCHITECTURE.md  DATA-RETENTION.md  E2E-CHECKLIST.md  E2E-PROOF-K3D.md  END-TO-END-FLOWS.md  PRODUCTION-READINESS-CHECKLIST.md  PROJECT-STATUS.md  RUNBOOK.md  SECURITY-HARDENING.md  SLOs.md  day3-learning-guide.md  dev-macos.md  hn-launch-lensai.md  otel-integration.md
ingestion/: Cargo.toml  build.rs
ingestion/src/: build_info.rs  config.rs  lib.rs  main.rs  metrics.rs  model_resolver.rs  server.rs
ingestion/src/handlers/: event.rs  ingest.rs  mod.rs  validate.rs
ingestion/src/kafka/: mod.rs  producer.rs
ingestion/src/rate_limit/: mod.rs  tenant_limits.rs  token_bucket.rs
ingestion/src/wal/: mod.rs  writer.rs
scripts/: demo-flows.sh  demo-hpa-lag.sh  docker-test-ingestion.sh  e2e-k3d-full.sh  run.sh  smoke-e2e.sh  smoke-k8s-e2e.sh  test-ingestion.sh
(+113 files in other folders)
